<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="to_label">To:</string>
    <string name="email_hint">Enter email address</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="send_button">Send</string>
    <string name="button">Button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>
